--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ body {
      font-family: "Open Sans", Arial, sans-serif;
      font-size: 15px;
      line-height: 20px;
-     font-weight: 200;
+     font-weight: 300;
      text-transform: none;
 }
 
@@ -141,14 +141,18 @@ a:focus h3 {
      opacity: 0.3;
 }
 
-/* Bestseller lists */
-
-.bestsellers-item {
-     list-style-type: decimal-leading-zero;
+.num {
+     font-family: "Gilroy", Tahoma, sans-serif;
+     font-weight: 800;
+     font-size: 179px;
+     line-height: 219px;
+     text-transform: uppercase;
+     color: var(--basic-white);
+     background-color: var(--special-yellow);
 }
 
 .bestsellers-benefits th {
-     font-style: "Gilroy", Tahoma, sans-serif;
+     font-family: "Gilroy", Tahoma, sans-serif;
      font-weight: 300;
      font-size: 13px;
      line-height: 15px;
@@ -165,7 +169,8 @@ a:focus h3 {
 
 /* Headlines */
 
-.page h3 {
+.page h3,
+.inner-page-title {
      font-family: "Gilroy", Tahoma, sans-serif;
      font-weight: 800;
      font-size: 47px;
